--- a/assets/style.css
+++ b/assets/style.css
@@ -32,7 +32,6 @@ nav img {
     margin-left: 1em;
     font-size: 1em;
 }
-
 /* end navbar */
 
 h1 {    
@@ -112,15 +111,6 @@ footer p, footer p:lang("ja") {
 }
 
 
-/* form stuff */
-.name-email {
-    min-width: 50%;
-    max-width: 100%;
-    float: left;
-}
-
-
-
 /* the button with my name on it */
 #name, #name-ja {
     font-weight: 550;
@@ -154,8 +144,3 @@ ruby rt {
     line-height: unset;
     /* this doesn't work in Chrome for some reason */
 }
-
-/* article p:lang(ja) {
-    font-size: 28px;
-    line-height: 1.5em;
-} */
